# workspace

./: .gitignore  .organize-rules.md  AGENTS.md  CLAUDE-CODE-SETUP.md  COMMITMENTS.md  COMPREHENSIVE-SOCIAL-MEDIA-STRATEGY.md  EXECUTION-CHECKPOINT.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  MODERN-MOBILE-DESIGN-SYSTEM.md  OPERATING-CHECKLIST.md  PRE-RESPONSE-GATE.md  REDESIGN-COMPLETE.md  SECURITY-PROTOCOLS.md  SKILLS-USAGE-PLAN.md  SOUL.md  TIKTOK-SKILLS-SECURITY-ANALYSIS.md  TOOLS.md  USER.md  X-ALGORITHM-ANALYSIS-2026.md  X-SKILLS-SECURITY-ANALYSIS.md  expo-qr.html
.clawhub/: lock.json
cron/: morning-briefing.md
docs/: BACKEND-HOSTING-COMPARISON.md  CLAUDE-CODE-OPENCLAW-INTEGRATION.md  OPENCLAW-TIPS.md  PLAYBOOK.md  TASK_SUMMARY.md  (+2 more)
projects/x-search-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt  setup.ps1
projects/x-search-mcp-server/docs/superpowers/specs/: 2026-04-10-http-transport-design.md
projects/x-search-mcp-server/src/x_search_mcp/: __init__.py  client.py  config.py  context.py  http_server.py  main.py  security.py
projects/x-search-mcp-server/tests/: test_client.py  test_security.py
projects/xapi-mcp-server/: .env.example  pyproject.toml
projects/xapi-mcp-server/src/xapi_mcp/: __init__.py  config.py  main.py  security.py
projects/xapi-mcp-server/src/xapi_mcp/lrs/: __init__.py  base.py  generic.py  ralph.py  veracity.py
projects/xapi-mcp-server/src/xapi_mcp/xapi/: __init__.py  models.py
projects/xapi-mcp-server/tests/: test_lrs_generic.py  test_models.py  test_security.py
(+127 files in other folders)
